# Rust-Secure-Wallet-AI

./: .env.testnet.local  .gitignore  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT.md  CORS更新说明.md  CORS配置说明.md  Cargo.toml  ENV_VARIABLES.md  LICENSE  NEW_README.md  Postman测试集合.json  QUICK_START.md  README.md  README_FORCE_PUSH.txt  README_LEGACY.md  README_LICENSE_SECTION.md  README_SCRIPTS.md  REPOSITORY_COMPARISON.md  SCRIPTS_REFERENCE.md  SECURITY_WARNING.md  TEST_ENV_POLICY.md  check_sync.bat  cleanup_repo.sh  cobertura.xml  commit_and_push.sh  commit_rename.bat  day2_start_here.sh  day2_test_fix.sh  day2_verify_balance.sh  delete_all_branches.sh  deny.toml  env.testnet.example  fetch_gha_logs.sh  final_cleanup_checklist.md  force_overwrite_github_main.sh  list_scripts.sh  manage_server.sh  manual_start_test.bat  push_to_github.bat  (+76 more)
.ci/: forbidden_prints_exceptions.txt  secret_allowlist.txt
.github/: dependabot.yml
.github/scripts/: ci_autofix.sh  run_full_autofix_flow.sh
.github/workflows/: audit.yml  ci-auto-fix.yml  ci-clean.yml  ci.yml  clippy.yml  codeql-analysis.yml  coverage.yml  deterministic-signing.yml  doc.yml  merge-conflict.yml  no-print-macros.yml  prevent-secret-prints.yml  release.yml  rust-ci.yml  rust.yml  rustfmt.yml  secret-return-check.yml  secret-return-lint.yml  security-ci.yml  security.yml  super-linter.yml  test_ci.yml
Defi-Hot-wallet-Rust/Defi-Hot-wallet-Rust/.github/workflows/: ci.yml
Defi-Hot-wallet-Rust/Defi-Hot-wallet-Rust/src/blockchain/: ethereum.rs
Defi-Hot-wallet-Rust/tests/common/: mock_blockchain.rs
ai-scripts/: README.md  move-all-ai-files.sh  quick-check.sh
data/: testnet_wallet.db  wallet.db
docs/notes/: ARCHIVE.md  Day1-2_完成总结.md  Day1-3_完成总结.md  Day1_完成总结.md  Day2_完整操作指南.md  Day3_运行测试.txt  Day5_完整执行指南.md  Day5_运行所有测试.txt  P0_关键问题修复完成报告.md  P2_安全审计完成总结报告.md  P3_区块链集成完善计划.md  README_前后端对接.md  README_测试网部署.md  RUN_DAY1_TESTS.txt  SECURE_LOGGING.md  SECURITY_NOTES.md  START_HERE.txt  Week1_Day1-4_完成总结.md  Week1_最终总结报告.md  Week4_密码学审计报告.md  Week5_API存储安全审计报告.md  Week6_依赖和代码审计报告.md  Week7_渗透测试计划和报告.md  ✅_正确启动命令.txt  ❓_PR显示问题解答.md  删除GitHub无用分支.md  前后端API对接文档.md  前后端对接完成总结.md  前后端对接文件清单.txt  前端集成测试指南.md  同步检查命令.txt  快速参考_前后端对接.txt  快速运行Day1-2测试.txt  手动启动测试指南.md  最终运行Day1-2测试.txt  测试成功-下一步指南.md  测试网1周测试计划.md  测试网Day1总结报告.md  测试覆盖率-立即开始.md  测试覆盖率优先级执行计划.md  (+30 more)
legacy/: archived_audit_mods.rs  archived_solana.rs  solana_rs_orig.rs
legacy-tests/: bridge_tests.rs
legacy/bridge/: mock.rs  mock_orig.rs  relay.rs  relay_orig.rs  transfer.rs  transfer_orig.rs
patches/elliptic-curve-tools/: Cargo.toml
patches/elliptic-curve-tools/src/: lib.rs  sop.rs
proptest-regressions/core/: validation.txt
scripts/: check-pr-status.sh  check_secret_returns.py  debug_create_wallet.sh  delete-useless-branches.sh  diagnose_balance.sh  final-cleanup.bat  final-cleanup.sh  final_test.sh  fix_and_commit.sh  fix_api_key.sh  force-overwrite-github-main.sh  generate_day1_coverage.sh  generate_week1_coverage_report.sh  quick-test-day2-fix.sh  run_all_week1_tests.sh  run_day1_tests_fixed.sh  run_day2_tests.sh  run_day3_tests.sh  run_dependency_audit.sh  run_sprint_95_tests.sh  run_sprint_storage_tests.sh  start_testnet.sh  start_testnet_windows.bat  test-env-start.bat  test_api_improved.bat  test_create_wallet_fix.sh  test_health.bat  test_no_auth.sh  test_server_status.bat  week_automated_test.sh  切换到新仓库.sh  对比GitHub和本地代码.sh  快速检查同步.sh  检查并切换到main分支.sh  调试失败测试.bat  验证修复效果.bat
src/: lib.rs  main.rs  mvp.rs  shamir.rs
src/api/: api_additional_tests.rs  api_bridge_env_compat.rs  api_bridge_stable_tests.rs  api_server_tests.rs  api_stress_tests.rs  bridge_api_env_tests.rs  handlers.rs  server.rs  types.rs
src/blockchain/: bridge_backup.rs  ethereum.rs  mod.rs  solana.rs  traits.rs
src/blockchain/bridge/: bridge_additional_tests.rs  mock.rs  mod.rs  relay.rs  tests.rs
src/core/: bridge_test.rs  config.rs  domain.rs  key_management.rs  mod.rs  validation.rs  wallet_info.rs  wallet_manager.rs  wallet_manager_bip44_tests.rs  wallet_manager_slip10_solana_tests.rs
src/core/wallet/: backup.rs  create.rs  recover.rs
src/crypto/: encryption_consistency.rs  hsm.rs  kdf.rs  mod.rs  multisig.rs  quantum.rs
src/i18n/: mod.rs
src/monitoring/: mod.rs
src/security/: encryption.rs  env_manager.rs  memory_protection.rs  mnemonic_export.rs  mod.rs  secret.rs
src/storage/: mod.rs
tests/: api_handlers_tests.rs  api_server_tests.rs  api_tests.rs  application_tests.rs  audit_redaction.rs  bridge_integration.rs  bridge_persistence_strict.rs  bridge_roundtrip_persistence.rs  bridge_tests.rs  cli_mnemonic_export_integration.rs  cli_smoke.rs  cli_tests.rs  concurrent_send_integration.rs  config_tests.rs  core_wallet_manager_tests.rs  crypto_shamir_tests.rs  deterministic_signing.rs  encryption_consistency_tests.rs  handlers_unit_tests.rs  integration_sqlite_nonce.rs  integration_tests.rs  kdf_and_derive_tests.rs  kek_rotation_tests.rs  mnemonic_export_tests.rs  nonce_sync_tests.rs  ops_backup_tests.rs  proptest_shamir.rs  send_http_concurrent.rs  serdes_tests.rs  shamir_tests.rs  sprint_95_blockchain_tests.rs  tools_serdes_tests.rs  transaction_signature_consistency.rs  tx_signing.rs  wallet_manager_tests.rs  week1_day1_wallet_core_tests.rs  week1_day2_wallet_backup_restore_tests.rs  week1_day3_crypto_signing_tests.rs  week1_day4_api_auth_endpoints_tests.rs
